[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-tool = "0.2"
ckb-testtool = "0.2"

byteorder = "1.3.1"
rand = "0.6.5"
lazy_static = "1.4"
ripemd160 = "0.8.0"
sha2 = "0.8.0"
secp256k1 = { version = "0.15.1", features = ["recovery"] }
faster-hex = "0.3"
hex = "0.4"

includedir = "0.5.0"
phf = "0.7.21"
sha3 = "0.8.2"
bech32 = "0.7.2"
