[package]
name = "pw-lock-dynamic-verify"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.7.1"
ckb-lib-pw-lock = { path = "../../ckb-lib-pw-lock" }
hex = { version = "0.4", default-features = false }
